<resources>
    <string name="app_name">BookReview</string>
    <string name="input_username">Input Username</string>
    <string name="register">Registrasi</string>
    <string name="input_password">Input Password</string>
    <string name="ulang_input_password">Ulang Input Password</string>
    <string name="input_nama">Input Nama</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="masukkan_username">Masukkan Username</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="login">Login</string>
    <string name="masuk">Masuk</string>
    <string name="kembali">Kembali</string>
    <string name="kategori">Kategori</string>
    <string name="tambah_kategori">Tambah Kategori</string>
    <string name="penambahan_kategori">Penambahan Kategori</string>
    <string name="tambah">Tambah</string>
    <string name="isi_buku">Isi Buku</string>
    <string name="masukkan_isbn">Masukkan ISBN</string>
    <string name="masukkan_nama_pengarang">Masukkan Nama Pengarang</string>
    <string name="masukkan_judul_buku">Masukkan Judul Buku</string>
    <string name="tambah_buku">Tambah Buku</string>
    <string name="title_activity_nav_bar">NavBar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_ratingdan_ulasan">RatingdanUlasan</string>
</resources>
