<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".Registrasi">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buat_akun"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textAllCaps="true"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:id="@+id/et_UsernameR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/input_username"/>

    <EditText
        android:id="@+id/et_InputPassR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:inputType="textPassword"
        android:hint="@string/input_password"/>

    <EditText
        android:id="@+id/et_InputPass1R"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:inputType="textPassword"
        android:hint="@string/ulang_input_password"/>

    <EditText
        android:id="@+id/et_NamaR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/input_nama"/>

    <Button
        android:id="@+id/btn_RegisterR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/register"/>


</LinearLayout>